// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<tfoot
  className="cf-table__foot"
>
  TableFoot
</tfoot>
`;

exports[`should render extra class name 1`] = `
<tfoot
  className="cf-table__foot extra"
>
  TableFoot
</tfoot>
`;
